# corpus-protocol-suite

./: .coverage  ARCHITECTURE.md  CERTIFICATION.md  CONTRIBUTING.md  LICENSE  LICENSE.md  Makefile  NORMATIVE_PRIORITY.md  NOTICE.md  PROMPT.mD  README.md  SECURITY.md  SPECIFICATION.md  VERSIONING.md  conformance_coverage.xml  conformance_results.xml  coverage.xml  embedding_framework_report.json  embedding_report.json  graph_framework_report.json  graph_report.json  llm_framework_report.json  llm_report.json  pyproject.toml  rahul_readme.txt  requirements-dev.txt  schema_report.json  vector_framework_report.json  vector_report.json  wire_report.json
conformance/: SCHEMA_CONFORMANCE.md
corpus_sdk/: cli.py  mock_embedding_adapter.py  mock_graph_adapter.py  mock_llm_adapter.py  reference_router.py
corpus_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
corpus_sdk/core/: async_bridge.py  context_translation.py  error_context.py  operational_context.py  sync_bridge.py
corpus_sdk/embedding/: __init__.py  embedding_base.py
corpus_sdk/graph/: graph_base.py
corpus_sdk/llm/: __init__.py  anthropic_adapter.py  azure_openai_adapter.py  llm_base.py  openai_adapter.py
corpus_sdk/mcp/: embedding_service.py  graph_service.py  llm_service.py
corpus_sdk/mock/: mock_embedding_adapter.py  mock_graph_adapter.py  mock_llm_adapter.py  mock_vector_adapter.py
corpus_sdk/router/: reference_router.py
corpus_sdk/vector/: __init__.py  milvus_adapter.py  pinecone.py  pinecone_adapter.py  vector_base.py  weaviate_adapter.py
docs/: COMMERCIAL.md  COMMERCIAL_LICENSE_OVERVIEW.md  PATENT_PLEDGE.md  ROUTER_OVERVIEW.md
docs/conformance/: BEHAVIORAL_CONFORMANCE.md  CERTIFICATION.md  CONFTEST.md  EMBEDDING_CONFORMANCE.md  GRAPH_CONFORMANCE.md  LLM_CONFORMANCE.md  SCHEMA_CONFORMANCE.md  VECTOR_CONFORMANCE.md  WIRE_CONFORMANCE.md
docs/guides/: ADAPTER_RECIPES.md  CONFORMANCE_GUIDE.md  DEPLOYMENT.md  FRAMEWORK.md  FRAMEWORK_QUICKSTART.py  IMPLEMENTATION.md  MIGRATION.md  QUICK_START.md
docs/spec/: ERRORS.md  METRICS.md  PROTOCOL.md  SCHEMA.md  SPECIFICATION.md  VERSIONING.md
embedding/: embedding_base.py
examples/common/: ctx.py  errors.py  metrics_console.py  printing.py  retry.py
examples/graph/: ex01_create_read_basics.py  ex02_streaming_semantics.py  ex03_caps_dialects_schema.py  ex04_standalone_resilience.py  ex05_error_mapping_retryable.py  ex06_metrics_console_demo.py  ex07_deadlines_timeouts.py  ex08_bulk_and_batch.py  ex09_cache_behavior_standalone.py  ex10_multi_tenant_scoping.py  ex11_health_and_modes.py  ex12_protocol_conformance_sanity.py  ex13_dialect_switching.py
examples/llm/: 01_complete_chat.py  02_stream_chunks.py  03_caps_ctx_window.py  04_standalone_resilience.py  05_error_mapping_retryable.py  06_metrics_console_demo.py  07_deadlines_timeouts.py  ex01_complete_chat.py  ex02_stream_chunks.py  ex03_caps_ctx_window.py  ex04_standalone_resilience.py  ex05_error_mapping_retryable.py  ex06_metrics_console_demo.py  ex07_deadlines_timeouts.py  mock_llm_adapter.py
examples/vector/: ex01_query_basic.py  ex02_upsert_del  ex02_upsert_delete.py  ex03_capabilities_limits.py  ex04_dimensionality_validation  ex05_filters_and_flags.py  ex06_metrics_console_demo.py  ex07_deadlines_timeouts.py  ex09_metadata_delete_and_health.py  ex10_topk_limits_and_caps_gating.py  ex12_metrics_console_demo.py
graph/: graph_base.py
guides/: IMPLEMENTATION.md
llm/: llm_base.py
reports/: embedding_framework_report.json  embedding_report.json  graph_framework_report.json  graph_report.json  llm_framework_report.json  llm_report.json  schema_report.json  vector_framework_report.json  vector_report.json  wire_report.json
schema/common/: envelope.error.json  envelope.request.json  envelope.stream.success.json  envelope.success.json  operation_context.json
schema/embedding/: embedding.capabilities.json  embedding.capabilities.request.json  embedding.capabilities.success.json  embedding.count_tokens.request.json  embedding.count_tokens.success.json  embedding.embed.request.json  embedding.embed.success.json  embedding.embed_batch.request.json  embedding.embed_batch.success.json  embedding.envelope.error.json  embedding.envelope.request.json  embedding.envelope.stream.success.json  embedding.envelope.success.json  embedding.get_stats.request.json  embedding.get_stats.success.json  embedding.health.request.json  embedding.health.success.json  embedding.partial_success.result.json  embedding.stats.json  embedding.stream_embed.request.json  embedding.stream_embed.success.json  embedding.types.batch_result.json  embedding.types.chunk.json  embedding.types.count_tokens_spec.json  embedding.types.embed_spec.json  embedding.types.failure.json  embedding.types.result.json  embedding.types.stream_embed_spec.json  embedding.types.vector.json  embedding.types.warning.json
schema/graph/: graph.ack.success.json  graph.batch.request.json  graph.batch.success.json  graph.bulk_vertices.request.json  graph.bulk_vertices.success.json  graph.capabilities.json  graph.capabilities.request.json  graph.capabilities.success.json  graph.delete_edges.request.json  graph.delete_edges.success.json  graph.delete_nodes.request.json  graph.delete_nodes.success.json  graph.edge.create.request.json  graph.envelope.error.json  graph.envelope.request.json  graph.envelope.success.json  graph.get_schema.request.json  graph.get_schema.success.json  graph.health.request.json  graph.health.success.json  graph.id.success.json  graph.query.request.json  graph.query.success.json  graph.types.chunk.json  (+33 more)
scripts/: test_all_conformance.py  test_embedding_conformance.py  test_graph_conformance.py  test_llm_conformance.py  test_vector_conformance.py
spec/: ADAPTER_GUIDE.md  ERRORS.md  IMPLEMENTATION.md  METRICS.md  SPECIFICATION.md  corpus_protocol_suite_v1.md  corpus_protocol_suite_v1.py
test-results/: llm-report.json  llm-report.xml  vector-report.json  vector-report.xml
tests/: __init__.py  cli.py  conftest.py  mock_embedding_adapter.py  pyproject.toml  run_conformance.py
vector/: vector_base.py
(+561 files in other folders)
